# src/routes/files.route.js
@@ -3,6 +3,7 @@ const filesController = require('../controller/files.controller');
 const validator = require('../middelwares/validation.middleware');
 const validatorSchemas = require('../validators/file-validator.shcemas');
 
-router.post('', validator(validatorSchemas.uploadFileSchema), filesController.uploadFile);
+router.post('', filesController.uploadFile);
+//router.post('', validator(validatorSchemas.uploadFileSchema), filesController.uploadFile);
 
 module.exports = router;
